# fruit_ninja_refactoring

./: .gitignore  README.md  dreambooth.py  finetune.py  inside_filling.py  internal_filling.py  main.py  new_dreambooth.py  pyproject.toml  train.py  unet_all_parameters.txt
config/: filling_config.yaml  finetune.yaml  finetune_config.yaml  finetune_orange.yaml  finetune_tless.yaml  finetune_tless_config.yaml  finetune_tless_lr_5e5_config.yaml  finetune_tless_prompt.yaml  trainer_config.yaml
test/: dreambooth_test.py  dreambooth_test_control.py
utils/: configs.py  filling.py  new_dreambooth.py  train_dreambooth_depth.py  transformation.py
